--- a/q/272303.html
+++ b/q/272303.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>053</td><td>R</td><td>240820T164247Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275068#275068">Dominic </a></td></tr>
-<tr d-ix="1"><td>048</td><td>C clang</td><td>240820T142313Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275066#275066">jdt</a></td></tr>
+<tr d-ix="0"><td>048</td><td>C clang</td><td>240820T142313Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275066#275066">jdt</a></td></tr>
+<tr d-ix="1"><td>053</td><td>R</td><td>240820T164247Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275068#275068">Dominic </a></td></tr>
 <tr d-ix="2"><td>046</td><td>R</td><td>240820T125629Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/275065#275065">Kirill L</a></td></tr>
 <tr d-ix="3"><td>078</td><td>tinylisp 2</td><td>240406T043201Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/272376#272376">DLosc</a></td></tr>
 <tr d-ix="4"><td>020</td><td>Haskell + hgl</td><td>240404T183008Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/272336#272336">Wheat Wi</a></td></tr>
@@ -43,10 +43,16 @@
 <tr d-ix="14"><td>055</td><td>Python 3.8</td><td>240403T210710Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/272307#272307">Jonathan</a></td></tr>
 <tr d-ix="15"><td>046</td><td>JavaScript Node.js</td><td>240403T203633Z</td><td><a href="https://codegolf.stackexchange.com/questions/272303/emulate-jellys-tie-scan/272306#272306">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 53 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 48 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>i;q((**p)(),c,*v,n){for(i=0;i&lt;n;)p[i%c](i+++v);}
+</code></pre>
+<p><a href="https://tio.run/##jVTbbqMwEH0uXzGKVAmIs8EEclna/Yp9S/PAcqksEUKDQ9ON@PXNzthkIQWqJYqJ7XPxzGQczaIszF@vVxG8maZtF5ZpsYjZFcutS3o4muLZCcRTHljFVjxGO1NMp9PKCuqryCWEJo42nC24wHnLd/CML2cHUzULoIbbM59DGMcGkcoR0myIVJ5@lfIYRlJR9yNUe4i6P2VSFNmHYsYjzPkQMxaViBPFK/q84vBuEpepBevGRR7uKFL6Fcm1OulBUnrKIykOuWFUBxFDcUSu5ldhVjIgwRyVDDLBigBtApUFqC6ABbGM2@EVOzUnjzFMmBLYCjyiURuG/CiSOEkB03mKZKNHUqadFuV27ewsZYvo205aRO2kyhSou9DZTc6F3q3hZ1LKwND1CkVu0tkVjjZA4lBuKSWXf6e@4CdksIeaNSsuwyXO1A9Y4NeDdrP/eAw0HqEbBnyBqa3Znf6eQfhJf9Por/G7JJ9RD1/pkzJiXcRyXw2bvk/Z9yESnZDjjPw4cddDXksdB@K5p41cfHsOvt2@FaWsdVsoK9T3m5TxjbbzB9O30lYI4PjTx9yt0GaF88XSocHrG6YDsXVr1JhRFKsxQ1WjpQ7KQ7TrLLga132/gkHMoOwG6Db668aXPKmOnjfsh5glYtbKk7sbGj1c4I4zllCsYExi3pfxtd7cITR3WPcviDhKKapsdJy04LeWdWDcN7SkhpZPpfidHFJTdYmFt1Mzt/UCIrDbsXMe9DWhm0nuvlV0U3RmEXbxw@0yeP7xkk@atqbnreVh53d42O93Kn3Nu3vG/H8ongJviCSSSfxdH@ZzBLg9HsFL3kZQ68QdE3k65uDgjXP9E6VZ@FpeZ@/XWbb/Cw" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="noreferrer">R</a>, 53 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(L,v,M=0)Reduce(\(...)el(M&lt;&lt;-c(M,L)[-1])(...),v,,,T)
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=dVLLTsMwEJQ48hWWuNjNungdp0lQwxc0F8StTRUpJBJST9Ci9lu4FCQ-Cr6GXVtJUx6XXWV2ZjK7yevb0_G9Kz52205nn8lKLuAFysKou_Zh17RyJafTqWo3spzPdSNLWKilxkp5mKgA9yqIvy6iTm4en7eyjmqoJ7UCvEnU5QgUHhWNRBAWRAzCKXUliluxRP-Yg8C4GiQTlkRBkntJBmJGzF7FfIIsYZj4kp_UeqRmlqO59S7I1Gx4Nc3QBRdL3RnqtvoZfGRGFonPiyFVMl6E_VPCaKOUnFJedGa4uMFzJfdwUPu1jQ4j2-Eo3pHSpOfXmYVsjobWxOhrdsq55ojXXHQwtF6SeVvnj-uGmDxz_T3R5lwdX8iYvzbXwfu_nL0_ml_fkxgYGHmIzkBShX_meAz9Gw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=dVLLTsMwEJQ48hWWuNjNungdp0lQwxc0F8StTRUpJBJST9Ci9lu4FCQ-Cr6GXVtJUx6XXWV2ZjK7yevb0_G9Kz52205nn8lKLuAFysKou_Zh17RyJafTqWo3spzPdSNLWKilxkp5mKgA9yqIvy6iTm4en7eyjmqoJ7UCvEnU5QgUHhWNRBAWRAzCKXUliluxRP-Yg8C4GiQTlkRBkntJBmJGzF7FfIIsYZj4kp_UeqRmlqO59S7I1Gx4Nc3QBRdL3RnqtvoZfGRGFonPiyFVMl6E_VPCaKOUnFJedGa4uMFzJfdwUPu1jQ4j2-Eo3pHSpOfXmYVsjobWxOhrdsq55ojXXHQwtF6SeVvnj-uGmDxz_T3R5lwdX8iYvzbXwfu_nL0_ml_fkxgYGHmIzkBShX_meAz9Gw" rel="noreferrer">Attempt This Online!</a></p>
 <p>An approach in <strong>R</strong> based on actually implementing the Jelly <code>tie</code> function:</p>
 <pre><code>tie={M=0;\(L)el(M&lt;&lt;-c(M[-1],L))}
 </code></pre>
@@ -54,22 +60,16 @@
 So we can use this as an argument to <strong>R</strong>'s standard scan-like function, <code>Reduce(...,accumulate=TRUE)</code> , similarly to <a href="https://codegolf.stackexchange.com/a/272358/95126">Giuseppe's answer</a>:</p>
 <pre><code>f=\(v,L)Reduce(\(...)tie(L)(...),v,,,T)
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=LYzNCoJQEEb3PcVAmxkcxatWQt6Wra6baqeGYFcQXJWKEj1JGwt6qN6mi7aYH873cZ6v6_gu5adtSjv87lNU3NFBX9pCY4qO41BTaVQ0vdwx84kWBsl7LN2tqZOuMY4iu8A4sUXGiujxtx1LrKtbYzw9D9SfPWtgyK2cGAoUDB6DzxAwrBjWDBuiJcgdJGLihgSuGRN6ri-mHWazehzn-wM" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=LYzNCoJQEEb3PcVAmxkcxatWQt6Wra6baqeGYFcQXJWKEj1JGwt6qN6mi7aYH873cZ6v6_gu5adtSjv87lNU3NFBX9pCY4qO41BTaVQ0vdwx84kWBsl7LN2tqZOuMY4iu8A4sUXGiujxtx1LrKtbYzw9D9SfPWtgyK2cGAoUDB6DzxAwrBjWDBuiJcgdJGLihgSuGRN6ri-mHWazehzn-wM" rel="noreferrer">Attempt This Online!</a></p>
 <p>Incorporating the code for <code>tie</code> directly into the <code>Reduce</code> call golfs this down to 53 bytes: this is sadly still longer than <a href="https://codegolf.stackexchange.com/a/275065/95126">Kirill L's answer</a> using a different approach, but pleasingly competitive with those of Giuseppe &amp; <a href="https://codegolf.stackexchange.com/a/272324/95126">pajonk</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 48 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>i;q((**p)(),c,*v,n){for(i=0;i&lt;n;)p[i%c](i+++v);}
-</code></pre>
-<p><a href="https://tio.run/##hZVhj6IwEIa/8ysmJpsA1gilgJ7n/RHjJRzIhkSRFWT3buNfP29awDIscvsBdvp22nmfTjFexMcof73fs82badp2YZkWi5lds9z6TM8XM9s6m@x7vrGKXfYS781sPp/X1uZ2z/IKIhOfNnxY8AkfO3cPW3w5e5iraAM36P6WS4iSxJBJ5ZOkxVhSef1VVpcorlTq6UmqPZZ6uh6rrDj@VpnJk8zlWGZyqLPkoPKKr3nF@d2UuUwNWF0u5qGiktKpJG718GBSes3jKjvnhlGfswSKC@Y2@XV0LBnIBXNcyZCb4ImAFEEeC8hzATwQy@iKV9mpOXtJYMbUArsMS1R6ca1KczbD6GY0NKMsN@XKRlt/dSgr9xvs5gxsrHTnYrUMPAYCLfxQMQZrBq63VzlyFdOu3N3eUiWj4y16jhic4LZ5TKlxghL0gp38ZlY4WGZ/DucU/7XwQNoAl7XQglZromLU@VLE/jOxb5GjRZvBXFpcq4pWDAKsq3Ep/eEAxxHXV481ccsHbk8MIuKWt27J2j3DXBvmxDCXhrVaExUjanh6Yt@wh4YXrWFpTaApropzpb9Ve7qouKIxzvEtHHxzYt0bWC@H1r3uoEd26RHwNAGPEPAkAa3WRMWIEpie2Ccg2q7uIGBRvmpEtzkkX/e4rDfEEeynEAmEsmEDRz4EYSFGmn6IQ3Q4xvbr8RCahyA8hOSh1ZqoGFEe0xP7PHzkkXYwHpdS1YVnFfave9B0gkCJO56rnitCwh@QSIcY/C/X/7FTD4KvIfgEgi8haLUmKkYUwuTE7jtJYAQI4yeDJYOF5MFVZStVq1CfO9H2hlREd6NdvpZPIdvccQiQYACkYJBgVYRJ0DIZ260HJdBQAgIlkFC0WhMVIwplcuIolPBxY/DLsXzSJ13JrjP4gUDdbfR10zpywCeQwtH7g1@UhHAKn/eO3r0HLNTAQgIslMC0WhMVIwpsciIFdjlU10sODv6u3v/G6TF6Le@L9/viePoH" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 46 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="noreferrer">R</a>, 46 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(L,v)c(a&lt;-v[1],Map(\(x,y)a&lt;&lt;-x(a,y),L,v[-1]))
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=dVJLTsMwEJVYcgpL3diNDR7H-aGUE8AJ0lSJKkVCYlFBqdKzsAlIHApOw4xHSQOFzTieee_lzUte356G92718bLvTP55tZZ3-qC2si3NoYJa37c7uZa9Pqq2LE0vW3zSCKkM1Eox6-si6uTjw_NeNlGjm2WjNNwk6nLWFKErthK0cFrEWnilFmJ1KyoI10ILiOuJsiRKxJQiUHItUkSOLMJjy2EPklCKE9vM2ITyOHdBBQiaT6_GGXhWcXh6i6erfxufiaFEEvwCu0rmi5B-hj3cKEOljBZNLRU_aXKW_cZFx5nsFEpQRDfZz3RS9uZx6GwMoeYnnxuyeE3FsKALlDzI-hCun2zSzI95giuoekrI2r82N6z9n89RH-zZ90QEMKJg69RIav5nhoHPbw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=dVJLTsMwEJVYcgpL3diNDR7H-aGUE8AJ0lSJKkVCYlFBqdKzsAlIHApOw4xHSQOFzTieee_lzUte356G92718bLvTP55tZZ3-qC2si3NoYJa37c7uZa9Pqq2LE0vW3zSCKkM1Eox6-si6uTjw_NeNlGjm2WjNNwk6nLWFKErthK0cFrEWnilFmJ1KyoI10ILiOuJsiRKxJQiUHItUkSOLMJjy2EPklCKE9vM2ITyOHdBBQiaT6_GGXhWcXh6i6erfxufiaFEEvwCu0rmi5B-hj3cKEOljBZNLRU_aXKW_cZFx5nsFEpQRDfZz3RS9uZx6GwMoeYnnxuyeE3FsKALlDzI-hCun2zSzI95giuoekrI2r82N6z9n89RH-zZ90QEMKJg69RIav5nhoHPbw" rel="noreferrer">Attempt This Online!</a></p>
 <p>Building up on <a href="https://codegolf.stackexchange.com/a/272324/78274">pajonk's</a> and <a href="https://codegolf.stackexchange.com/a/272358/78274">Giuseppe's</a> answers, I find it shorter to <code>Map</code> over the lists of functions and values, maintaining an additional accumulator, rather than to force the actual <code>Reduce</code> to do what we need.</p>
 <p>Note that <code>Map</code> formats the output as a list. It's +3 bytes to change to <code>mapply</code>, which would preserve the more readable vector output:
-<a href="https://ato.pxeger.com/run?1=dVJbasMwEIR-9hSC_kixRLWy_CpOT9AbOA42AUMhhdCmwT5Lf9xCD9Weprta7Livn5W1OzOeHfvl9XF869bvz8fO5B-wkXf6pHayLc2pglo_tIfDfpAb2etBtWVpetnik0ZUZaBWiomfF1En9_dPR9lEjW5WjdJwk6jLRVOErthJ0MJpEWvhlboS61tRQbgWWkBcz5QVUSKmFIGSa5EicmIRHlsOe5CEUpzZZsEmlMe5CypA0Hx-Nc7As4rD01s8Xf3T-EIMJZLgF9hVslyE9DPs4UYZKmW0aGqp-FmTs-y3LhoWsnMoQRHdZN_TSdmbx6GzMYSan31uyeI1FcOCLlDyIOtDuH62STM_5QmuoOopIWv_2tyw9n8-J32wv74nIoARBVunRlLzPzOOfH4B" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<a href="https://ato.pxeger.com/run?1=dVJbasMwEIR-9hSC_kixRLWy_CpOT9AbOA42AUMhhdCmwT5Lf9xCD9Weprta7Livn5W1OzOeHfvl9XF869bvz8fO5B-wkXf6pHayLc2pglo_tIfDfpAb2etBtWVpetnik0ZUZaBWiomfF1En9_dPR9lEjW5WjdJwk6jLRVOErthJ0MJpEWvhlboS61tRQbgWWkBcz5QVUSKmFIGSa5EicmIRHlsOe5CEUpzZZsEmlMe5CypA0Hx-Nc7As4rD01s8Xf3T-EIMJZLgF9hVslyE9DPs4UYZKmW0aGqp-FmTs-y3LhoWsnMoQRHdZN_TSdmbx6GzMYSan31uyeI1FcOCLlDyIOtDuH62STM_5QmuoOopIWv_2tyw9n8-J32wv74nIoARBVunRlLzPzOOfH4B" rel="noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/dloscutoff/tinylisp2" rel="nofollow noreferrer">tinylisp 2</a>, 78 bytes</h1>
 
