--- a/q/274342.html
+++ b/q/274342.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>134</td><td>C gcc</td><td>240821T034607Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/275073#275073">Conor O&</a></td></tr>
-<tr d-ix="1"><td>153</td><td>tinylisp 2</td><td>240819T194750Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/275057#275057">DLosc</a></td></tr>
-<tr d-ix="2"><td>032</td><td>Uiua</td><td>240819T193907Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/275056#275056">janMakos</a></td></tr>
-<tr d-ix="3"><td>131</td><td>Haskell</td><td>240729T214810Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274564#274564">DPD-</a></td></tr>
-<tr d-ix="4"><td>096</td><td>StackControl 1.1</td><td>240805T191746Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274710#274710">Швеев Ал</a></td></tr>
-<tr d-ix="5"><td>102</td><td>jq</td><td>240805T114251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274696#274696">GammaFun</a></td></tr>
-<tr d-ix="6"><td>086</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
-<tr d-ix="7"><td>208</td><td>GNU C</td><td>240725T221756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274444#274444">Knogger</a></td></tr>
-<tr d-ix="8"><td>092</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
-<tr d-ix="9"><td>065</td><td>sed 4.2.2 E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
+<tr d-ix="0"><td>065</td><td>sed 4.2.2 E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
+<tr d-ix="1"><td>134</td><td>C gcc</td><td>240821T034607Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/275073#275073">Conor O&</a></td></tr>
+<tr d-ix="2"><td>153</td><td>tinylisp 2</td><td>240819T194750Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/275057#275057">DLosc</a></td></tr>
+<tr d-ix="3"><td>032</td><td>Uiua</td><td>240819T193907Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/275056#275056">janMakos</a></td></tr>
+<tr d-ix="4"><td>131</td><td>Haskell</td><td>240729T214810Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274564#274564">DPD-</a></td></tr>
+<tr d-ix="5"><td>096</td><td>StackControl 1.1</td><td>240805T191746Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274710#274710">Швеев Ал</a></td></tr>
+<tr d-ix="6"><td>102</td><td>jq</td><td>240805T114251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274696#274696">GammaFun</a></td></tr>
+<tr d-ix="7"><td>086</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
+<tr d-ix="8"><td>208</td><td>GNU C</td><td>240725T221756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274444#274444">Knogger</a></td></tr>
+<tr d-ix="9"><td>092</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
 <tr d-ix="10"><td>040</td><td>Uiua</td><td>240724T170308Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274416#274416">janMakos</a></td></tr>
 <tr d-ix="11"><td>120</td><td>Google Sheets</td><td>240724T111238Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274403#274403">z..</a></td></tr>
 <tr d-ix="12"><td>092</td><td>Python</td><td>240724T062044Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274386#274386">Albert.L</a></td></tr>
@@ -47,7 +47,17 @@
 <tr d-ix="18"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
 <tr d-ix="19"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 134 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-E</code>, 65 bytes</h1>
+<p>The input string and sequence of moves should be separated by a tab. Code contains literal tab characters (which SE has replaced with spaces below, alas).</p>
+<pre><code>:
+s/(.)?\|(.* )&lt;/|\1\2/
+s/\|(.)?(.* )&gt;/\1|\2/
+s/.?\|(.*   )#/|\1/
+t
+</code></pre>
+<p><a href="https://tio.run/##VY1BCsIwEEXXySkC2bSCDXUpIV2oN3CZTaABC6GRznQ3ZzdOWkR9zOr/xx@IYylnCabp2sFT0x1Eaw353p8MpzVphy11xve0p93H1NU0Eku5PyZQfEFhBCShbUVvOHlZF6C8qDiPWy/cL3YXuAfCsOCu2C/OymtMEaMKKfH2H44FSbzI39wrP3HKM5Tj7Q0" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 134 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>j;f(c,i,q)char*c,*i,*q;{for(q=strchr(c,'|');*i;i++)*i%2?q-c?strcpy(q-1,q),q--:7:*(q-=j=q-c|*i%3?1-*i%3:0)?j?*q^=q[j]^=*q^=q[j]:0:q--;}
 </code></pre>
@@ -122,7 +132,7 @@ f(c, i, q)
 }
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/tinylisp2" rel="nofollow noreferrer">tinylisp 2</a>, 153 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/tinylisp2" rel="nofollow noreferrer">tinylisp 2</a>, 153 bytes</h1>
 
 <pre class="lang-lisp prettyprint-override"><code>(d G(\(A M B)(: R(=(h M)62)(? M(G(? R(,(] 1 B)A)(t A))(t M)(? R(t B)(,(](=(h M)60)A)B)))(,(~ A)(,&quot;|&quot;B
 (\(S M)(: I(first-index S 124)(G(~(] I S))M(t([ I S
@@ -163,7 +173,7 @@ f(c, i, q)
     (concat &quot;|&quot; right)))))
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 32 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 32 bytes</h1>
 <pre><code>∧(⍜⊙⊜□⍚⨬⋅@|⇌±⊙⊸⦷⟜⍥⇌⊙&quot;\W|&quot;)⊗⊙&quot;#&gt;&quot;
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_13_0-dev_1__JCBUaGlzIGlzIGEgdGVzdHwKCiQgIzw8PDw8IyMjIyMjPgoK4oinKOKNnOKKmeKKnOKWoeKNmuKorOKLhUB84oeMwrHiipniirjiprfin5zijaXih4ziipkiXFd8IiniipfiipkiIz4iCg==" rel="nofollow noreferrer">Try it online!</a></p>
@@ -182,7 +192,7 @@ f(c, i, q)
            ⇌ # else move the cursor
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s><a href="https://tio.run/##fZDRaoMwFIbvfYpDHNhS6wMUlcF6WdhFeydSwowkLI1iTpkteXd3onPrBu4nkOSc///gHMntu9B6UJe26RD2HHlyUBaDv4Xk2GqFQ52tlEHRvXHNUTDHknVSN7rSIBPrHa@GioEs@vi2u5dRHmVFv9kUtzK@l4GE/nlVFGV8LtfnrJ9sZZRGmX9pbhH6HRXCaG6FlFdGUZ1@Pg@UGy5cGcigagIgtVc8Yncw8ARWNh901cBOUlmgwwGFRceAhalXOCpnsN3CSXLn28uUl2tnXdOBMNXIIUz@qHQCeduDy/0PJKd1yGm7X8j0R3k6At3s@7YtI/dCCxTAtR6n/KWckBNwOe/GodJ5KW74BA" rel="nofollow noreferrer">133</a></s> 131 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s><a href="https://tio.run/##fZDRaoMwFIbvfYpDHNhS6wMUlcF6WdhFeydSwowkLI1iTpkteXd3onPrBu4nkOSc///gHMntu9B6UJe26RD2HHlyUBaDv4Xk2GqFQ52tlEHRvXHNUTDHknVSN7rSIBPrHa@GioEs@vi2u5dRHmVFv9kUtzK@l4GE/nlVFGV8LtfnrJ9sZZRGmX9pbhH6HRXCaG6FlFdGUZ1@Pg@UGy5cGcigagIgtVc8Yncw8ARWNh901cBOUlmgwwGFRceAhalXOCpnsN3CSXLn28uUl2tnXdOBMNXIIUz@qHQCeduDy/0PJKd1yGm7X8j0R3k6At3s@7YtI/dCCxTAtR6n/KWckBNwOe/GodJ5KW74BA" rel="nofollow noreferrer">133</a></s> 131 bytes</h1>
 <ul>
 <li>-2 bytes thanks to @DLosc</li>
 </ul>
@@ -200,12 +210,12 @@ h x _=x
 <li>The two strings are joined with a | in the mid</li>
 </ol>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl/tree/1.1" rel="nofollow noreferrer">StackControl 1.1</a>, 96 characters</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/CREAsTIVE/StackControl/tree/1.1" rel="nofollow noreferrer">StackControl 1.1</a>, 96 characters</h1>
 <p>So basicly i unpack string on to stack and move on it directly, a lot of space get taked to prevent  cursor go of the edge of the stack</p>
 <pre><code>[0 0R 0 0⟧←←←:&quot;|&quot;⊗⍃⇆(&quot;|&quot;≠)⊚⍄R⇆(→⇆)⟲(:&quot;&lt;&quot;=(,:#→¿←)(:&quot;&gt;&quot;=(,→:#←¿)(:&quot;#&quot;=(,:#,?)?)⁇)⁇)∴&quot;|&quot;]→⟦⇆⊍⌦⌦⌫⌫W
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://stedolan.github.io/jq/" rel="nofollow noreferrer">jq</a>, 102 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://stedolan.github.io/jq/" rel="nofollow noreferrer">jq</a>, 102 bytes</h1>
 <pre><code>reduce.m[]as$m(.s;{&quot;&gt;&quot;:sub(&quot;\\|(?&lt;c&gt;.)&quot;;.c+&quot;|&quot;),&quot;&lt;&quot;:sub(&quot;(?&lt;c&gt;.)\\|&quot;;&quot;|&quot;+.c),&quot;#&quot;:sub(&quot;.\\|&quot;;&quot;|&quot;)}[$m])
 </code></pre>
 <p><a href="https://tio.run/##VY7BEoIgEEDvfQWzetDRobsSHeoTuqkHQmaqkZoAT@K3ExlRvtnTvsewt6fDcoflFsA6JfqRCyybjulUZljXE1Co9HjOoG1ttiec4hxqzAuwkJdAggzGN1B7U2DuZRIk/q7zuUlllzs3gYYKTperRn4YMkIbCyVIv03Im2SBwrz5tIdRaftQSNz7pQ4x/Yesc19ra5gy/w/ID0pifhSDMAKxYYhXrKA@j7GNf5Plwhc" rel="nofollow noreferrer" title="jq – Try It Online">Try it online!</a></p>
@@ -222,7 +232,7 @@ h x _=x
 </code></pre>
 <p>If the motions need to be passed as a single string, then <strong>+5 bytes</strong> by using <code>reduce(.m/&quot;&quot;)[]as $m</code> instead.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>100</s> <s>96</s> <s>87</s></sup> 86 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>100</s> <s>96</s> <s>87</s></sup> 86 bytes</h1>
 <p><em>-4 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em><br />
 <em>-9 bytes thanks to <a href="https://codegolf.stackexchange.com/users/122251/no-comment">@no comment</a></em></p>
 <pre class="lang-python prettyprint-override"><code>def f(s,o):
@@ -231,7 +241,7 @@ h x _=x
 <p><a href="https://ato.pxeger.com/run?1=XVDPaoMwHD7rUwRLMdlU2sFgiAplYzDYYdCyi_UgM2JEkmBS6MA32aWX7Z162ZPssF-i3bp9hBC_f_6Stw_5qhvBD4f3na7Dm-NzRWtUYxUIEruoFj1iiHEkYpXj9pLNr4FZknAZL4pURVJI3MZwYLyie-wPPiE5m19li6RNT3q4JMXU_mkKO8ap7ZSU44X5DYBxGSC6lyi1etQr3TOJSaRkxzT2tjrMkEesVwWQVeCE0KT7W-0HMJjVRxH2aCpxR3qngc4vVGE_awyEbYoofxEVxWSMy55xjXPvfvXw6AXIe1qt116Re17UCsZNiqA0NcMWoJ6xZLzl4fi1aZhCsEqkqdKD48wSg5lF5jhwl01TDkZ1b3e9GuBZKK-s28nOkYxuYzrzDO5EqEGXvR5zyS-yxKaGk-vH5N7RjmqKyq6DqZzZH2SQtDHXaA4Mkthpxy53xYVuaG96Bv0_a2BtenyEbw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Modifies the input in-place</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.gnu.org/software/gnu-c-manual/gnu-c-manual.html" rel="nofollow noreferrer">GNU C</a>, <s>214</s> 208 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.gnu.org/software/gnu-c-manual/gnu-c-manual.html" rel="nofollow noreferrer">GNU C</a>, <s>214</s> 208 bytes</h1>
 <ul>
 <li>-6 bytes by replacing all <code>*(x+y)</code> by <code>x[y]</code></li>
 </ul>
@@ -239,7 +249,7 @@ h x _=x
 </code></pre>
 <p><a href="https://www.programiz.com/online-compiler/33a9kPKYfJEho" rel="nofollow noreferrer">Try it on programiz.com</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>103</s> 92 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>103</s> 92 bytes</h1>
 <p>Saved <strong>11 bytes</strong> using <code>r[1]=</code> to remove the first character of <code>$r</code> and <code>l[-1]=</code> to remove the last character of <code>$l</code>.</p>
 
 <pre class="lang-sh prettyprint-override"><code>IFS=\|
@@ -263,16 +273,6 @@ for m;    # motions as separate arguments
   }
 &lt;&lt;&lt;$l\|$r
 </code></pre>
-</div>
-<div id="pu9" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-E</code>, 65 bytes</h1>
-<p>The input string and sequence of moves should be separated by a tab. Code contains literal tab characters.</p>
-<pre><code>:
-s/(.)?\|(.* )&lt;/|\1\2/
-s/\|(.)?(.* )&gt;/\1|\2/
-s/.?\|(.*   )#/|\1/
-t
-</code></pre>
-<p><a href="https://tio.run/##VY1BCsIwEEXXySkC2bSCDXUpIV2oN3CZTaABC6GRznQ3ZzdOWkR9zOr/xx@IYylnCabp2sFT0x1Eaw353p8MpzVphy11xve0p93H1NU0Eku5PyZQfEFhBCShbUVvOHlZF6C8qDiPWy/cL3YXuAfCsOCu2C/OymtMEaMKKfH2H44FSbzI39wrP3HKM5Tj7Q0" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu10" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 40 bytes</h1>
 <pre><code>⍜⊙↻⊂@|∧⊃(+-⊸¬=@&gt;|⍜⊙↻↘=@#⊙-⊙1):⊙:⊙▽⊃⊗⊸≠@|
