--- a/q/210497.html
+++ b/q/210497.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>306</td><td>Brainf**k</td><td>240821T170156Z</td><td><a href="https://codegolf.stackexchange.com/questions/210497/write-a-hello-interpreter/275080#275080">madeforl</a></td></tr>
+<tr d-ix="0"><td>304</td><td>Brainf**k</td><td>240821T170156Z</td><td><a href="https://codegolf.stackexchange.com/questions/210497/write-a-hello-interpreter/275080#275080">madeforl</a></td></tr>
 <tr d-ix="1"><td>060</td><td>YASEPL</td><td>240208T193818Z</td><td><a href="https://codegolf.stackexchange.com/questions/210497/write-a-hello-interpreter/269914#269914">madeforl</a></td></tr>
 <tr d-ix="2"><td>073</td><td>TypeScript's type system</td><td>240202T232138Z</td><td><a href="https://codegolf.stackexchange.com/questions/210497/write-a-hello-interpreter/269737#269737">noodle p</a></td></tr>
 <tr d-ix="3"><td>033</td><td>Rattle</td><td>240202T185823Z</td><td><a href="https://codegolf.stackexchange.com/questions/210497/write-a-hello-interpreter/269731#269731">Daniel H</a></td></tr>
@@ -91,9 +91,9 @@
 <tr d-ix="62"><td>058</td><td>Python 3</td><td>200903T041558Z</td><td><a href="https://codegolf.stackexchange.com/questions/210497/write-a-hello-interpreter/210500#210500">Manish K</a></td></tr>
 <tr d-ix="63"><td>052</td><td>Python 3</td><td>200903T041713Z</td><td><a href="https://codegolf.stackexchange.com/questions/210497/write-a-hello-interpreter/210501#210501">Mukundan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Brainfuck" rel="nofollow noreferrer">Brainf**k</a>, 306 bytes</h1>
-<p><a href="https://tio.run/##ZZDBDgIxCER/xTuWL5jwI4SDmpi6Jh422e@vQ121zc6JwPAmcF0vj9d9uz1bM3EvYXZ2CMSshOxyFIoNBGiBI4ymfWhlFgghKlk/Qtr@dXeojFJNsFgwyyQExGYWg/rgSEmIYupPXM1Cj8vT3sAc@4MzIZ@79Htgh/JR0VqtSz29AQ" rel="nofollow noreferrer" title="brainfuck – Try It Online">Try it online!</a></p>
-<pre><code>&gt;+[[-]&gt;&gt;,[&lt;+&lt;+&gt;&gt;-]++++++++[&lt;----&gt;-]&lt;]&lt;[-]&lt;[&lt;]&gt;[&lt;+++++++[&gt;---------------&lt;-]&gt;+[[[-]&gt;]++++++++++[&gt;++++++++++&lt;-]&gt;+.+++++++++++++..[-]&lt;+&gt;][&lt;-&gt;+]+&lt;[&gt;-&lt;[-]]&gt;[[-]&lt;++++++++[&gt;+++++++++&lt;-]&gt;.&lt;+++++++[&gt;++++&lt;-]&gt;+.+++++++..+++.[-]&lt;++++++++[&gt;++++&lt;-]&gt;.&lt;+++++++++++[&gt;+++++&lt;-]&gt;.&lt;++++++[&gt;++++&lt;-]&gt;.+++.------.--------.[-]&lt;]&gt;&gt;]
+<div id="pu0" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Brainfuck" rel="nofollow noreferrer">Brainf**k</a>, <s>306</s> 304 bytes</h1>
+<p><a href="https://tio.run/##ZY/BDgIxCER/xTuWL5jMjxAOamLqmnjYZL@/Ql21zc6JwPAGruvl8bpvt2drFLPi5NkgELK47DKUUDTgCAsMzjDtQ5ZZCEigkvUjpO1fd4fKKNUECz2yKC4IbGZFUB8cKQlRTP2Jq1nocXnaG5hjf3Am5POXfh/Ufpe3VutST28" rel="nofollow noreferrer" title="brainfuck – Try It Online">Try it online!</a></p>
+<pre><code>&gt;+[[-]&gt;&gt;,[&lt;+&lt;+&gt;&gt;-]++++++++[&lt;----&gt;-]&lt;]&lt;[-]&lt;[&lt;]&gt;[&lt;+++++++[&gt;---------------&lt;-]&gt;+[[[-]&gt;]++++++++++[&gt;++++++++++&lt;-]&gt;+.+++++++++++++..[-]&lt;+&gt;][&lt;-&gt;+]+&lt;[&gt;-&lt;[-]]&gt;[[-]&lt;++++++++[&gt;+++++++++&lt;-]&gt;.&lt;+++++++[&gt;++++&lt;-]&gt;+.+++++++..+++.[-]&lt;++++++++[&gt;++++&lt;-]&gt;.&lt;+++++++++++[&gt;+++++&lt;-]&gt;.&lt;++++++[&gt;++++&lt;-]&gt;.+++.------.--------.[-]]&gt;]
 </code></pre>
 <p>I'm still very new at brainf**k and this was very fun to make!</p>
 <p>it requires a space at the end to know when to start</p>
@@ -138,10 +138,10 @@
         +++.                        r
         ------.                     l
         --------.                   d
-        [-]                         Erase the text from the tape
-        &lt;                           Go back one to end the loop
+        [-]                         Erase the text
+                                   Go back one to end the loop
     ]
-    &gt;&gt;  Go up 2 to continue the loop until there's no more data.
+    &gt;   Go up 2 to continue the loop until there's no more data
 ]
 <span class="math-container">```</span>
 </code></pre>
