--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240822T063847Z
+"   /golfscore                                      20240822T075625Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/255943.html">CGAC2022 Day 23: North Pole Railroads           : 0255943</a>
 <a href="q/274924.html">Shift right by half a trit                      : 0274924</a>
 <a href="q/219631.html">Remove excessive occurrences                    : 0219631</a>
 <a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
