--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240822T121314Z
+"   /golfscore                                      20240822T135640Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/71822.html">Filter out and add up                           : 0071822</a>
 <a href="q/92168.html">Slowly turn a string into another               : 0092168</a>
 <a href="q/255943.html">CGAC2022 Day 23: North Pole Railroads           : 0255943</a>
 <a href="q/274924.html">Shift right by half a trit                      : 0274924</a>
