--- a/q/82374.html
+++ b/q/82374.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>076</td><td>Scala 3</td><td>240818T123649Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275042#275042">user</a></td></tr>
-<tr d-ix="1"><td>145</td><td>Scala 3</td><td>240818T025908Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275038#275038">138 Aspe</a></td></tr>
-<tr d-ix="2"><td>145</td><td>TypeScript's type system</td><td>240818T001506Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275032#275032">noodle p</a></td></tr>
-<tr d-ix="3"><td>038</td><td>Uiua</td><td>240817T185422Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275029#275029">janMakos</a></td></tr>
-<tr d-ix="4"><td>044</td><td>Perl 5 + pa</td><td>240816T140242Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275014#275014">Dom Hast</a></td></tr>
+<tr d-ix="0"><td>036</td><td>Perl 5 + p</td><td>240816T140242Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275014#275014">Dom Hast</a></td></tr>
+<tr d-ix="1"><td>076</td><td>Scala 3</td><td>240818T123649Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275042#275042">user</a></td></tr>
+<tr d-ix="2"><td>145</td><td>Scala 3</td><td>240818T025908Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275038#275038">138 Aspe</a></td></tr>
+<tr d-ix="3"><td>145</td><td>TypeScript's type system</td><td>240818T001506Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275032#275032">noodle p</a></td></tr>
+<tr d-ix="4"><td>038</td><td>Uiua</td><td>240817T185422Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/275029#275029">janMakos</a></td></tr>
 <tr d-ix="5"><td>018</td><td>Jelly</td><td>160607T045206Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82378#82378">Dennis</a></td></tr>
 <tr d-ix="6"><td>078</td><td>Python 2</td><td>160607T055840Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82382#82382">Dennis</a></td></tr>
 <tr d-ix="7"><td>058</td><td>Ruby</td><td>160607T202922Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82409#82409">Value In</a></td></tr>
@@ -44,13 +44,20 @@
 <tr d-ix="15"><td>046</td><td>Vim</td><td>160607T051144Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82379#82379">DJMcMayh</a></td></tr>
 <tr d-ix="16"><td>019</td><td>Pyth</td><td>160607T042524Z</td><td><a href="https://codegolf.stackexchange.com/questions/82374/geobitsian-language/82376#82376">Leaky Nu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 76 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-p</code>, 36 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>%a=&lt;&gt;=~/(\S)(\S*)/g;s/./$&amp;$a{lc$&amp;}/g</code></pre>
+<p><a href="https://dom111.github.io/code-sandbox/#eyJsYW5nIjoid2VicGVybC01LjI4LjEiLCJjb2RlIjoiJWE9PD49fi8oXFxTKShcXFMqKS9nO3MvLi8kJiRhe2xjJCZ9L2ciLCJhcmdzIjoiLXAiLCJpbnB1dCI6IlBlb3BsZSB0aGluayBiYW5hbmFzIGFyZSBncmVhdCwgZG9uJ3QgeW91P1xubm8gcHJvIGdyIGFtIG0gaW5nIn0=" rel="nofollow noreferrer">Try it online!</a></p>
+<h2>Explanation</h2>
+<p>The hash <code>%a</code> is built using the first letter of each segment (from <code>&lt;&gt;</code>, <code>STDIN</code>) as the key and any remaining letters (0 or more) as the value. Then <code>s///</code>ubstitution is performed on <code>$_</code> replacing each character in the string with itself (<code>$&amp;</code>) followed by the value from the hash at (the <code>l</code>ower<code>c</code>ase) key in <code>%a</code>. <code>$_</code> is then implicitly <code>-p</code>rinted.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 76 bytes</h1>
 <pre class="lang-scala prettyprint-override"><code>w=&gt;_.map(c=&gt;c+(w split &quot; &quot;find(_(0)==c.toLower)getOrElse &quot;a&quot;).tail).mkString
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=bY7BSsQwFEX3_YpLVgkyRRBBChmo4G7EhboahuG1k9ZompYktQwyX-JmNrpx4ffM39g2unP1Huc97j3vn74kQxdfa7aw7UDOss3psi2eVRlwS9riLUmAVzKoMtwHp20Nufxnw0cfqsXVaTXI5TZtqOOlXJZnfIDvjA5gYJW2O77l50LKMg3tqh2UE7UKd-7GeAVGTKSBtBFp8xJjfzO_gZ2q0Iw-nFztM-TO0X4dnzYiw6MdK-QoC0Rbp3xvJlRxVqsWhQ6eCc4Yy029R6MCCNeKXJLPYybTKXl4UpEM5FH0f2ja1MymrzFHzF3daBCM5bFvYofkELWPxzh_AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Based on <a href="https://codegolf.stackexchange.com/a/275038/95792">this answer</a> by 138 Aspen. Might be further golfable but I need to run now</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 145 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 145 bytes</h1>
 <p>Golfed version. <a href="https://ato.pxeger.com/run?1=XU89T8MwFNzzK5482cqHoJEQipRICDEwVAyIqarQq-sEg-tEtksKVf8AGzNLF1j4Rf03ODGoEtOd7t679-7jy3JUmH_PSKrbHo0m80PeLh4FdzBFqWEbRQDPqKAugN46I3WTQEBWVoFACZ9rV6fnh3faJ9brNlthR3lZ0T4mQOI-s52SjnrORus-49hJh0q-Cq88haDRZ_9nN2W1oScsc-21dmm1GdgUu6wR7sZcKSsoD17CYzLsH-MI-33sDWApalj5ShRNYwu4MAZfZmFwzgq409L5IltfNxQ2wq7VINWU4MIgcFwOSBKg-QRcC6eTs782rr18QHM8zcaYzlOnNA1Rg7aLduGj_T7gDw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <pre class="lang-scala prettyprint-override"><code>(w,s)=&gt;s.map(c=&gt;(w+&quot; &quot;+w.split(&quot; &quot;).map(_.capitalize).mkString(&quot; &quot;)).split(&quot; &quot;).map(x=&gt;x(0).toInt-&gt;x).toMap.getOrElse(c.toInt,c+&quot;&quot;)).mkString(&quot;&quot;)
 </code></pre>
@@ -76,7 +83,7 @@
 }
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>TypeScript's type system, 145 bytes</h1>
+<div id="pu3" class="pu"><h1>TypeScript's type system, 145 bytes</h1>
 <pre class="lang-typescript prettyprint-override"><code>//@ts-ignore
 type F&lt;I,S,O=&quot;&quot;&gt;=S extends`${infer C}${infer R}`?F&lt;I,R,`${O}${C}${` ${I} `extends`${any} ${Lowercase&lt;C&gt;}${infer Z} ${any}`?Z:&quot;&quot;}`&gt;:O
 </code></pre>
@@ -87,7 +94,7 @@ type F&lt;I,S,O=&quot;&quot;&gt;=S extends`${infer C}${infer R}`?F&lt;I,R,`${O}$
 <p>Loop over the string S until it is empty by pattern-matching it against <code>`${infer C}${infer R}`</code> (which makes the first character C and the rest R) and recursing with <code>F&lt;I,R, ...&gt;</code> (keeping I the same and using R for the string). If the pattern-match fails because we have exhausted S, return the type parameter O which contains the result.</p>
 <p>For the replacing logic, we attempt to pattern match <code>` ${I} `</code> (I surrounded by a space on both ends) against <code>`${any} ${Lowercase&lt;C&gt;}${infer Z} ${any}`</code> (which says match anything, a space, C converted to lowercase, some characters which are assigned to Z, another space, and anything). This effectively finds the suffix Z of the segment which starts with C. Then, Z—or nothing, if the match failed—is then appended to C and O.</p>
 </div>
-<div id="pu3" class="pu"><h1>Uiua, 38 bytes</h1>
+<div id="pu4" class="pu"><h1>Uiua, 38 bytes</h1>
 <p><a href="https://uiua.org/pad?src=0_12_0-rc_2__IyBFeHBlcmltZW50YWwhCiQgQWxneSBtZXQgYSBCZWFyCiQgQSBCZWFyIG1ldCBBbGd5CiQgVGhlIEJlYXIgd2FzIGJ1bGd5CiQgVGhlIGJ1bGdlIHdhcyBBbGd5Cgoibm8gcHJvIGdyIGFtIG0gaW5nIgoKL-KXh-KKguKorOKLheKImCjiiqHiipnil4wp4oq44oqD4oiIKOKKlzop4oqZOuKKmcKk4oq44omh4peH4oqi4oqC4oq44o2a4o2c4oqi4oy14oqc4pah4oq44omgQCAKCiZwICMgcHJldHR5IHByaW50Cg==" rel="nofollow noreferrer">Try it online!</a></p>
 <pre><code>/◇⊂⨬⋅∘(⊡⊙◌)⊸⊃∈(⊗:)⊙:⊙¤⊸≡◇⊢⊂⊸⍚⍜⊢⌵⊜□⊸≠@ 
 </code></pre>
@@ -101,13 +108,6 @@ type F&lt;I,S,O=&quot;&quot;&gt;=S extends`${infer C}${infer R}`?F&lt;I,R,`${O}$
    ⨬⋅∘(⊡⊙◌) # substitute character with replacement
 /◇⊂ # join into final string
 </code></pre>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-pa</code>, 44 bytes</h1>
-
-<pre class="lang-perl prettyprint-override"><code>%a=map/(.)(.*)/g,@F;$_=&lt;&gt;;s/(.)\K/$a{lc$1}/g</code></pre>
-<p><a href="https://dom111.github.io/code-sandbox/#eyJsYW5nIjoid2VicGVybC01LjI4LjEiLCJjb2RlIjoiJWE9bWFwLyguKSguKikvZyxARjskXz08PjtzLyguKVxcSy8kYXtsYyQxfS9nIiwiYXJncyI6Ii1wYSIsImlucHV0Ijoibm8gcHJvIGdyIGFtIG0gaW5nXG5QZW9wbGUgdGhpbmsgYmFuYW5hcyBhcmUgZ3JlYXQsIGRvbid0IHlvdT8ifQ==" rel="nofollow noreferrer">Try it online!</a></p>
-<h2>Explanation</h2>
-<p>Using <code>@F</code> (populated and <code>-a</code>uto-split on whitespace from the first line of input that contains the segments), the hash <code>%a</code> is built using the first letter of each segment as the key and any remaining letters (0 or more) as the value. Then <code>$_</code> is populated with the next line of input and a <code>s///</code>ubstitution is performed on <code>$_</code> replacing each character in the string (but <code>\K</code>eeping it in place) with the value from the hash at (the <code>l</code>ower<code>c</code>ase) key in <code>%a</code>. <code>$_</code> is then implicitly <code>-p</code>rinted.</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="http://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 18 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ṣ⁶;Œu1¦€$;©ZḢiÐ€ị®
