--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240822T142618Z
+"   /golfscore                                      20240822T163214Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/141725.html">Make an alphabet searchlight!                   : 0141725</a>
 <a href="q/82374.html">Geobitsian Language                             : 0082374</a>
 <a href="q/78510.html">Reverse positive runs                           : 0078510</a>
 <a href="q/71822.html">Filter out and add up                           : 0071822</a>
