--- a/q/141725.html
+++ b/q/141725.html
@@ -154,7 +154,7 @@
 _start:
 mov dl,26   ;initiate the string length
 mov ecx,m   ;load the alphabet string
-mov esi,n   ;load the trailing string
+mov esi,n   ;load the leading string
 f:          ;loop f label
 mov edi,0   ;initiate loop x counter
 x:          ;loop x label
