--- a/q/274532.html
+++ b/q/274532.html
@@ -60,6 +60,16 @@
     g(n)*2:1
 }
 </code></pre>
+<hr />
+<h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 62 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(n){a=b=1
+if(n)for(i in n:1){a=a*i
+b=b*2*i+b
+a=a+b}
+c(2*a,b)}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhY37WI08jSrE22TbA25MtOA7LT8Io1Mhcw8hTwrQ5BEolYmV5JtkpaRVqZ2EheQr51Uy5WsYaSVqJOkWQsxZV1xYkFBTqWGgZWhgU6aJkRwwQIIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/274535/95126">shape warrior t's answer</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <del>63</del> 45 bytes</h1>
 <p>Saved 18 bytes thanks to @att</p>
